--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-child-one></app-child-one>
+<app-navbar></app-navbar>
+<app-home></app-home>
+<app-friends></app-friends>
+<app-myprofile></app-myprofile>
